nouveautés dans le fronté

--- a/app/assets/stylesheets/pages/_company-show.scss
+++ b/app/assets/stylesheets/pages/_company-show.scss
@@ -40,6 +40,7 @@
 .company-info-card{
   background-color: #fff;
   margin-bottom: 20px;
+  margin-top: 20px;
   min-width: 200px;
   flex: 1 1 0;
   margin-right: 20px;
@@ -50,6 +51,7 @@
 .company-captable-card{
   background-color: #fff;
   margin-bottom: 20px;
+  margin-top: 20px;
   flex: 1 1 0;
 }
 
