--- a/app/views/companies/_slide-show-company.html.erb
+++ b/app/views/companies/_slide-show-company.html.erb
@@ -3,7 +3,7 @@
 
   <div class="text-align-center">
     <%= link_to new_company_operation_path(@company) do %>
-      <button style="button" class="btn btn-slide">Levée de fonds    <i class="fas fa-rocket"></i></button>
+      <button style="button" class="btn btn-slide">Lancer    <i class="fas fa-rocket"></i></button>
     <% end %>
   </div>
 
