--- a/app/views/d_documents/index.html.erb
+++ b/app/views/d_documents/index.html.erb
@@ -1,64 +1,39 @@
 
-<!-- =================================Bar de progression ci-dessous -->
-
-  <div class="progress">
-    <div class="start-end"></div>
+<div class="main-width">
 
 
-      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; id="un" class="rectangle">
-      </div>
-      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="un" class="rond">
-        <p style="font-weight: bold; font-size: 20px; color: #2D3D4D;">1</p>
-      </div>
+  <h1>Documents à Signer</h1>
+  <p>Opération de <%= @operation.category %> : <%= @operation.name %></p>
 
-      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; id="deux" class="rectangle">
-      </div>
-      <div style="background-color: #F3BE69; color: white; box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="deux" class="rond">
-        <p style="font-weight: bold; font-size: 20px; color: #2D3D4D;">2</p>
-      </div>
-
-      <div style="background: repeating-linear-gradient(
-          -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="trois" class="rectangle">
-      </div>
-      <div style="background: repeating-linear-gradient(
-          -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="trois" class="rond">
-        <p style="font-weight: bold; font-size: 20px; color: #2D3D4D">3</p>
-      </div>
-
-
-
-    <div style="background: repeating-linear-gradient(
-          -45deg, #FFECCA, #FFECCA 8px, #F3BE69 8px, #F3BE69 16px); color: white;box-shadow: 1px 1px 5px grey; padding-top: 5px;" id="quatre" class="rectangle">
-      </div>
-
-
-    <div class="start-end"></div>
-
+  <div class="doc-container">
+    <% @operation.d_documents.each do |ddoc| %>
+      <%= link_to d_document_path(@operation, ddoc) do %>
+        <div class="doc-card partition">
+          <div class="sign-card-logo">
+            <i class="fas fa-edit"></i>
+          </div>
+          <div class="doc-card-body">
+            <div class="doc-card-avatar">
+              <i class="fas fa-file-pdf"></i>
+            </div>
+            <div class="sign-card-header">
+              <%= ddoc.title %>
+              <i class="fas fa-envelope"></i>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
   </div>
-  <!-- ================================= -->
 
 
 
-<h1>Liste des documents dynamiques générés</h1>
 
-<ul>
-  <% @other_documents.each do |d_document| %>
-    <li>
-      <%= link_to d_document.title, d_document_path(d_document), target: :_blank %>
-    </li>
-  <% end %>
-</ul>
 
-<ul>
-  <%# @users.each do |user| %>
-    <%#= link_to "#{user.subscription_bund.title}", d_document_path(user.subscription_bund) %>
-  <%# end %>
 
-  <% @users.each_with_index do |user, i| %>
-    <% subscription_bund = @subscription_bunds[i] %>
-    <li>
-      <%= link_to "#{subscription_bund.title}", d_document_path(subscription_bund, user_id: user), target: :_blank %>
-    </li>
-  <% end %>
-</ul>
 
+
+
+
+
+</div>
