--- a/app/views/operations/_dataroom-list.html.erb
+++ b/app/views/operations/_dataroom-list.html.erb
@@ -22,19 +22,34 @@
       </div>
     </li>
   <% end %>
-</ul>
-
-<ul>
-  <% @operation.d_documents.each do |doc|%>
-    <li>
-      <div class="investor-list-content">
-        <div class="doc-list-header-name">
-          <%= doc.title %>
-        </div>
-        <div class="investor-list-header-amount">
-          A signer
-        </div>
+  <li>
+    <div class="investor-list-content">
+      <div class="doc-list-header-name">
+        Procès-verbal d'assemblée générale initiale
       </div>
-    </li>
-  <% end %>
+      <div class="investor-list-header-amount">
+        Template
+      </div>
+    </div>
+  </li>
+  <li>
+    <div class="investor-list-content">
+      <div class="doc-list-header-name">
+        Procès-verbal d'assemblée générale de clôture
+      </div>
+      <div class="investor-list-header-amount">
+        Template
+      </div>
+    </div>
+  </li>
+  <li>
+    <div class="investor-list-content">
+      <div class="doc-list-header-name">
+        Bulletin de souscription
+      </div>
+      <div class="investor-list-header-amount">
+        Template
+      </div>
+    </div>
+  </li>
 </ul>
