--- a/app/assets/stylesheets/components/_signing.scss
+++ b/app/assets/stylesheets/components/_signing.scss
@@ -1,11 +1,8 @@
 .sign-card-header {
   text-align: center;
-  height: 90px;
-  border-bottom-width: 1px;
   padding: 12px;
-  border-bottom: 2px solid #FDBB58;
-  margin-bottom:22px;
   position: relative;
+  height: 45px;
   h4 {
     font-weight:bolder;
   }
@@ -26,7 +23,7 @@
   text-align: right;
   padding: 4px;
   position: relative;
-  font-size: 12px !important;
+  font-size: 14px !important;
 }
 
 .doc-list-header {
@@ -36,7 +33,8 @@
   align-items: center;
   padding: 4px 7px;
   border-top: 1px solid #ffac30;
-  border-bottom: 1px solid #ffac30;
+  border-bottom: 1px solid #FDBB58;
+
   & span {
     font-size: 0.9em;
     font-style: italic;
@@ -50,3 +48,37 @@
 }
 
 
+.partition-sign {
+  width: 12vw;
+}
+
+.sign-card-body {
+  border-bottom: 2px solid #FDBB58;
+
+
+  p {
+    font-size: 14px;
+    padding:0px 20px 10px 20px;
+    margin: 0px;
+  }
+}
+
+.sign-card-avatar{
+  text-align: center;
+  padding: 20px;
+  font-size: 55px;
+
+  .avatar{
+    border-radius: 50%;
+    border: 2px solid #2C3C4C;
+    border-spacing: 2px;
+  }
+}
+
+
+.sign-send {
+  color: orange;
+  text-align: center;
+  font-size: 20px;
+  padding: 12px;
+}
