--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -213,7 +213,7 @@ input[type="submit"] {
 }
 .btn-slide {
   width: 160px;
-  color: white;
+  color: white !important;
   background: #ffac30;
   border-radius: 6px !important;
   font-size: 0.8em !important;
