--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -14,7 +14,7 @@
 
     <div id="home-loop-eclair">
       <%= image_tag "eclair.png",  id: "home-eclair", alt: "eclair" %>
-      <h3>LES 3 ETAPES D'UN SUPERCLOSING REUSSI</h3>
+      <h3>LES 3 ÉTAPES D'UN SUPERCLOSING RÉUSSI</h3>
     </div>
   </div>
   <div class='container-fluid home-steps'>
