slide dernière page

--- a/app/views/d_documents/index.html.erb
+++ b/app/views/d_documents/index.html.erb
@@ -1,3 +1,7 @@
+<div id="slide-info-fin">
+  <%= render 'slide-info-fin', company: @company, operation: @operation %>
+</div>
+
 <div class="main-width">
 
   <!--   <div class='row'> -->
