legere modif sut texte de la hp

--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -26,7 +26,7 @@
        Créez votre profil société
       </div>
       <div class='step-card-body'>
-        Complétez le profil de votre société et renseignez les informations relatives à son capital.
+        Complétez le profil de votre société et renseignez les informations relatives à son capital. Nom, adresse, capital social, valeur nominale des actions et c'est parti !"
       </div>
     </div>
 
