petits trucs du soir

--- a/app/views/captables/new.html.erb
+++ b/app/views/captables/new.html.erb
@@ -25,7 +25,7 @@
 
 <br>
 
-  <div class="row">
+  <div class="row" style='margin-bottom: 40px;'>
     <div class="col-xs-12 col-sm-8 col-sm-offset-2">
       <div id="form-shareholders">
         <%= render 'form-shareholders', company: @company %>
