--- a/app/views/pages/_home-main.html.erb
+++ b/app/views/pages/_home-main.html.erb
@@ -68,7 +68,7 @@
         <div class="home-card-body">
           <% if current_user.companies.length == 0 %>
 
-            <h5>Vous n'avez encore enregistré aucune société sur SuperClosing.</h5>
+            <h5 style='margin-left: 20px; margin-bottom:  40px; padding-bottom: 60px;'>Vous n'avez encore enregistré aucune société sur SuperClosing.</h5>
 
           <% else %>
            <div class='company-container'>
