--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -46,3 +46,8 @@
 .flatpickr-calendar.open {
   z-index: 9999 !important;
 }
+.form-add-sdocument {
+  max-width: 320px;
+  margin-top: 20px;
+  height: fit-content;
+}
