--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -17,7 +17,7 @@
         <div class='company-show-logo'>
           <strong><%= @company.name %></strong>
           <% if @company.logo_url.file == nil %>
-            <img src="https://via.placeholder.com/120" class="logo">
+            <p><img src="https://via.placeholder.com/120" class="logo"></p>
           <% else %>
           <p> <%= cl_image_tag @company.logo_url, height: 120, width: 120, crop: :fit %></p>
             <% end %>
